--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,5 @@ repositories {
 dependencies {
     testImplementation 'io.rest-assured:rest-assured:4.1.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'com.tngtech.java', name: 'junit-dataprovider', version: '1.10.0'
 }
